@@ -1,16 +1,26 @@
-
 ![Logo](https://i.ibb.co/h2d1snT/IMG-8186-2.jpg)
 
 # Genetic Simulation
 
 A project to simulate the behavior and evolution of bots controlled by their own DNA
 
+## How to run
+
+### First method:
+To run project you simply need to execute command
+
+`java --module-path "[PATH_TO_JAVAFX]\lib" --add-modules javafx.controls,javafx.fxml -jar genetic_simulation.jar`
+
+**Don't forget to change path to javafx.**
+
+### Second method:
+You can run `commandForRun.sh`. This file will automaticaly make previous steps.
 
 ## Documentation
 
  - [Project documentation](https://gitlab.fel.cvut.cz/B222_B0B36PJV/bahmemak/-/wikis/Project-Documentation)
  - [User manual](https://gitlab.fel.cvut.cz/B222_B0B36PJV/bahmemak/-/wikis/User-Manual)
- - [Javadoc](https://gitlab.fel.cvut.cz/B222_B0B36PJV/bahmemak/-/tree/main/src/site/doc)
+ - [Javadoc](https://gitlab.fel.cvut.cz/B222_B0B36PJV/bahmemak/-/tree/doc)
 
 
 ## Authors
